my part UCF befor merge